--- a/volandoAlto/volandoAlto/src/volandoAlto/interfaz/VentanaTripulacion.form
+++ b/volandoAlto/volandoAlto/src/volandoAlto/interfaz/VentanaTripulacion.form
@@ -320,7 +320,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
-            <Property name="text" type="java.lang.String" value="LLegada"/>
+            <Property name="text" type="java.lang.String" value="Llegada"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtHoraLlegada">
