--- a/volandoAlto/volandoAlto/src/volandoAlto/interfaz/VentanaTripulacion.form
+++ b/volandoAlto/volandoAlto/src/volandoAlto/interfaz/VentanaTripulacion.form
@@ -73,7 +73,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="32" max="32767" attributes="0"/>
                   <Component id="jPanelPrincipal" min="-2" max="-2" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
